@@ -7,19 +7,15 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.context.SpringBootTest;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.Genre;
-import ru.yandex.practicum.filmorate.model.Rating;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.impl.db.FilmDbStorage;
 import ru.yandex.practicum.filmorate.storage.impl.db.UserDbStorage;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static util.CustomEasyRandom.*;
 
 @SpringBootTest
 @AutoConfigureTestDatabase
@@ -33,23 +29,23 @@ class FilmServiceTest {
     public void shouldGetCommonFilms() {
         int likeScore = 8;
 
-        Film film1 = Film.builder().name("Titanic").description("Nothing on Earth can separate them").releaseDate(LocalDate.of(1997, 11, 1)).duration(194).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film2 = Film.builder().name("Avatar").description("This is the new world").releaseDate(LocalDate.of(2009, 12, 17)).duration(162).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film3 = Film.builder().name("Fight Club").description("Intrigue. Chaos. Soap").releaseDate(LocalDate.of(1999, 9, 11)).duration(139).mpa(Rating.builder().id(4).name("R").build()).build();
-
+        Film film1 = nextFilm();
+        Film film2 = nextFilm();
+        Film film3 = nextFilm();
         filmDbStorage.createFilm(film1);
         filmDbStorage.createFilm(film2);
         filmDbStorage.createFilm(film3);
 
         int filmId1 = film1.getId();
 
-        User user1 = User.builder().name("Mark").login("marklogin").email("mark@email.com").birthday(LocalDate.of(1992, 1, 2)).build();
-        User user2 = User.builder().name("Ben").login("benlogin").email("ben@email.com").birthday(LocalDate.of(1995, 2, 4)).build();
+        User user1 = nextUser();
+        User user2 = nextUser();
 
         userDbStorage.createUser(user1);
         userDbStorage.createUser(user2);
 
-        int userId1 = user1.getId(), userId2 = user2.getId();
+        int userId1 = user1.getId();
+        int userId2 = user2.getId();
 
         filmDbStorage.addScore(filmId1, userId1, likeScore);
         filmDbStorage.addScore(filmId1, userId2, likeScore);
@@ -64,16 +60,16 @@ class FilmServiceTest {
     public void shouldGetNoFilmsWhenNoCommon() {
         int likeScore = 8;
 
-        Film film1 = Film.builder().name("Titanic").description("Nothing on Earth can separate them").releaseDate(LocalDate.of(1997, 11, 1)).duration(194).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film2 = Film.builder().name("Avatar").description("This is the new world").releaseDate(LocalDate.of(2009, 12, 17)).duration(162).mpa(Rating.builder().id(3).name("PG-13").build()).build();
+        Film film1 = nextFilm();
+        Film film2 = nextFilm();
 
         filmDbStorage.createFilm(film1);
         filmDbStorage.createFilm(film2);
 
         int filmId1 = film1.getId(), filmId2 = film2.getId();
 
-        User user1 = User.builder().name("Mark").login("marklogin").email("mark@email.com").birthday(LocalDate.of(1992, 1, 2)).build();
-        User user2 = User.builder().name("Ben").login("benlogin").email("ben@email.com").birthday(LocalDate.of(1995, 2, 4)).build();
+        User user1 = nextUser();
+        User user2 = nextUser();
 
         userDbStorage.createUser(user1);
         userDbStorage.createUser(user2);
@@ -90,35 +86,19 @@ class FilmServiceTest {
 
     @Test
     public void getPopularFilmsWithParametresTest() {
-        Film film1 = Film.builder().name("Фильм 1").description("Описание 1")
-                .releaseDate(LocalDate.of(1997, 01, 1))
-                .duration(194).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film2 = Film.builder().name("Фильм 2").description("Описание 2")
-                .releaseDate(LocalDate.of(2009, 12, 17)).duration(162)
-                .mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film3 = Film.builder().name("Фильм 3").description("Описание 3")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film4 = Film.builder().name("Фильм 4").description("Intrigue. Chaos. Soap")
-                .releaseDate(LocalDate.of(1999, 10, 11)).duration(50)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film5 = Film.builder().name("Фильм 5").description("Описание 5")
-                .releaseDate(LocalDate.of(1998, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film6 = Film.builder().name("Фильм 6").description("Описание 6")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
+        Film film1 = nextFilm(1997);
+        Film film2 = nextFilm(2009);
+        Film film3 = nextFilm(1999);
+        Film film4 = nextFilm(1999);
+        Film film5 = nextFilm(1998);
+        Film film6 = nextFilm(1999);
 
-        film1.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(3).name("Мультфильм").build())));
-        film2.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(4).name("Триллер").build())));
-        film3.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film4.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(3).name("Мультфильм").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film5.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film6.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(1).name("Комедия").build())));
-
+        film1.setGenres(List.of(getGenre(3)));
+        film2.setGenres(List.of(getGenre(4)));
+        film3.setGenres(List.of(getGenre(1), getGenre(2)));
+        film4.setGenres(List.of(getGenre(3), getGenre(2)));
+        film5.setGenres(List.of(getGenre(1), getGenre(2)));
+        film6.setGenres(List.of(getGenre(1)));
 
         Film filmForTest1 = filmDbStorage.createFilm(film1);
         Film filmForTest2 = filmDbStorage.createFilm(film2);
@@ -127,16 +107,11 @@ class FilmServiceTest {
         Film filmForTest5 = filmDbStorage.createFilm(film5);
         Film filmForTest6 = filmDbStorage.createFilm(film6);
 
-        User user1 = User.builder().name("User1").login("User1login").email("User1@email.com")
-                .birthday(LocalDate.of(1992, 1, 2)).build();
-        User user2 = User.builder().name("User2").login("User2login").email("User2@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user3 = User.builder().name("User3").login("User3login").email("User3@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user4 = User.builder().name("User4").login("User4login").email("User4@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user5 = User.builder().name("User5").login("User5login").email("User5@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
+        User user1 = nextUser();
+        User user2 = nextUser();
+        User user3 = nextUser();
+        User user4 = nextUser();
+        User user5 = nextUser();
 
         userDbStorage.createUser(user1);
         userDbStorage.createUser(user2);
@@ -189,35 +164,20 @@ class FilmServiceTest {
 
     @Test
     public void getPopularFilmsWithoutParametresTest() {
-        Film film1 = Film.builder().name("Фильм 1").description("Описание 1")
-                .releaseDate(LocalDate.of(1997, 01, 1))
-                .duration(194).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film2 = Film.builder().name("Фильм 2").description("Описание 2")
-                .releaseDate(LocalDate.of(2009, 12, 17)).duration(162)
-                .mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film3 = Film.builder().name("Фильм 3").description("Описание 3")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film4 = Film.builder().name("Фильм 4").description("Intrigue. Chaos. Soap")
-                .releaseDate(LocalDate.of(1999, 10, 11)).duration(50)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film5 = Film.builder().name("Фильм 5").description("Описание 5")
-                .releaseDate(LocalDate.of(1998, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film6 = Film.builder().name("Фильм 6").description("Описание 6")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
+        Film film1 = nextFilm(1997);
+        Film film2 = nextFilm(2009);
+        Film film3 = nextFilm(1999);
+        Film film4 = nextFilm(1999);
+        Film film5 = nextFilm(1998);
+        Film film6 = nextFilm(1999);
 
-        film1.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(3).name("Мультфильм").build())));
-        film2.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(4).name("Триллер").build())));
-        film3.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film4.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(3).name("Мультфильм").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film5.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film6.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(1).name("Комедия").build())));
+        film1.setGenres(List.of(getGenre(3)));
+        film2.setGenres(List.of(getGenre(4)));
+        film3.setGenres(List.of(getGenre(1), getGenre(2)));
 
+        film4.setGenres(List.of(getGenre(3), getGenre(2)));
+        film5.setGenres(List.of(getGenre(1), getGenre(2)));
+        film6.setGenres(List.of(getGenre(1)));
 
         Film filmForTest1 = filmDbStorage.createFilm(film1);
         Film filmForTest2 = filmDbStorage.createFilm(film2);
@@ -226,16 +186,11 @@ class FilmServiceTest {
         Film filmForTest5 = filmDbStorage.createFilm(film5);
         Film filmForTest6 = filmDbStorage.createFilm(film6);
 
-        User user1 = User.builder().name("User1").login("User1login").email("User1@email.com")
-                .birthday(LocalDate.of(1992, 1, 2)).build();
-        User user2 = User.builder().name("User2").login("User2login").email("User2@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user3 = User.builder().name("User3").login("User3login").email("User3@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user4 = User.builder().name("User4").login("User4login").email("User4@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user5 = User.builder().name("User5").login("User5login").email("User5@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
+        User user1 = nextUser();
+        User user2 = nextUser();
+        User user3 = nextUser();
+        User user4 = nextUser();
+        User user5 = nextUser();
 
         userDbStorage.createUser(user1);
         userDbStorage.createUser(user2);
@@ -292,37 +247,22 @@ class FilmServiceTest {
 
     @Test
     public void getPopularFilmsWithCountAndYearParametresTest() {
-        Film film1 = Film.builder().name("Фильм 1").description("Описание 1")
-                .releaseDate(LocalDate.of(1997, 01, 1))
-                .duration(194).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film2 = Film.builder().name("Фильм 2").description("Описание 2")
-                .releaseDate(LocalDate.of(2009, 12, 17)).duration(162)
-                .mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film3 = Film.builder().name("Фильм 3").description("Описание 3")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film4 = Film.builder().name("Фильм 4").description("Intrigue. Chaos. Soap")
-                .releaseDate(LocalDate.of(1999, 10, 11)).duration(50)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film5 = Film.builder().name("Фильм 5").description("Описание 5")
-                .releaseDate(LocalDate.of(1998, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film6 = Film.builder().name("Фильм 6").description("Описание 6")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
+        Film film1 = nextFilm(1997);
+        Film film2 = nextFilm(2009);
+        Film film3 = nextFilm(1999);
+        Film film4 = nextFilm(1999);
+        Film film5 = nextFilm(1998);
+        Film film6 = nextFilm(1999);
 
-        film1.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(3).name("Мультфильм").build())));
-        film2.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(4).name("Триллер").build())));
-        film3.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film4.setGenres(new ArrayList<>(Arrays.asList(
-                Genre.builder().id(2).name("Драма").build(),
-                Genre.builder().id(3).name("Мультфильм").build()
-        )));
-        film5.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film6.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(1).name("Комедия").build())));
-
+        film3.setGenres(List.of(
+                getGenre(1),
+                getGenre(2)
+        ));
+        film4.setGenres(List.of(
+                getGenre(2),
+                getGenre(3)
+        ));
+        film6.setGenres(List.of(getGenre(2)));
 
         Film filmForTest1 = filmDbStorage.createFilm(film1);
         Film filmForTest2 = filmDbStorage.createFilm(film2);
@@ -331,16 +271,11 @@ class FilmServiceTest {
         Film filmForTest5 = filmDbStorage.createFilm(film5);
         Film filmForTest6 = filmDbStorage.createFilm(film6);
 
-        User user1 = User.builder().name("User1").login("User1login").email("User1@email.com")
-                .birthday(LocalDate.of(1992, 1, 2)).build();
-        User user2 = User.builder().name("User2").login("User2login").email("User2@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user3 = User.builder().name("User3").login("User3login").email("User3@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user4 = User.builder().name("User4").login("User4login").email("User4@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user5 = User.builder().name("User5").login("User5login").email("User5@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
+        User user1 = nextUser();
+        User user2 = nextUser();
+        User user3 = nextUser();
+        User user4 = nextUser();
+        User user5 = nextUser();
 
         userDbStorage.createUser(user1);
         userDbStorage.createUser(user2);
@@ -394,35 +329,19 @@ class FilmServiceTest {
 
     @Test
     public void getPopularFilmsWithCountAndGenreIdTest() {
-        Film film1 = Film.builder().name("Фильм 1").description("Описание 1")
-                .releaseDate(LocalDate.of(1997, 01, 1))
-                .duration(194).mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film2 = Film.builder().name("Фильм 2").description("Описание 2")
-                .releaseDate(LocalDate.of(2009, 12, 17)).duration(162)
-                .mpa(Rating.builder().id(3).name("PG-13").build()).build();
-        Film film3 = Film.builder().name("Фильм 3").description("Описание 3")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film4 = Film.builder().name("Фильм 4").description("Intrigue. Chaos. Soap")
-                .releaseDate(LocalDate.of(1999, 10, 11)).duration(50)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film5 = Film.builder().name("Фильм 5").description("Описание 5")
-                .releaseDate(LocalDate.of(1998, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
-        Film film6 = Film.builder().name("Фильм 6").description("Описание 6")
-                .releaseDate(LocalDate.of(1999, 9, 11)).duration(139)
-                .mpa(Rating.builder().id(4).name("R").build()).build();
+        Film film1 = nextFilm();
+        Film film2 = nextFilm();
+        Film film3 = nextFilm();
+        Film film4 = nextFilm();
+        Film film5 = nextFilm();
+        Film film6 = nextFilm();
 
-        film1.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(3).name("Мультфильм").build())));
-        film2.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(4).name("Триллер").build())));
-        film3.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film4.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(3).name("Мультфильм").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film5.setGenres(new ArrayList<>(Arrays.asList(Genre.builder().id(1).name("Комедия").build(),
-                Genre.builder().id(2).name("Драма").build())));
-        film6.setGenres(new ArrayList<>(Collections.singletonList(Genre.builder().id(1).name("Комедия").build())));
-
+        film1.setGenres(List.of(getGenre(3)));
+        film2.setGenres(List.of(getGenre(4)));
+        film3.setGenres(List.of(getGenre(1), getGenre(2)));
+        film4.setGenres(List.of(getGenre(3), getGenre(2)));
+        film5.setGenres(List.of(getGenre(1), getGenre(2)));
+        film6.setGenres(List.of(getGenre(1)));
 
         Film filmForTest1 = filmDbStorage.createFilm(film1);
         Film filmForTest2 = filmDbStorage.createFilm(film2);
@@ -431,16 +350,11 @@ class FilmServiceTest {
         Film filmForTest5 = filmDbStorage.createFilm(film5);
         Film filmForTest6 = filmDbStorage.createFilm(film6);
 
-        User user1 = User.builder().name("User1").login("User1login").email("User1@email.com")
-                .birthday(LocalDate.of(1992, 1, 2)).build();
-        User user2 = User.builder().name("User2").login("User2login").email("User2@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user3 = User.builder().name("User3").login("User3login").email("User3@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user4 = User.builder().name("User4").login("User4login").email("User4@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
-        User user5 = User.builder().name("User5").login("User5login").email("User5@email.com")
-                .birthday(LocalDate.of(1995, 2, 4)).build();
+        User user1 = nextUser();
+        User user2 = nextUser();
+        User user3 = nextUser();
+        User user4 = nextUser();
+        User user5 = nextUser();
 
         userDbStorage.createUser(user1);
         userDbStorage.createUser(user2);
